<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForgotpwActivity"
    android:background="#17171f">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ftforgot"
        android:textColor="#38ffc4"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iVGembokforgotpw" />

    <ImageView
        android:id="@+id/iVGembokforgotpw"
        android:layout_width="217dp"
        android:layout_height="219dp"
        android:layout_marginTop="195dp"
        android:contentDescription="@string/gembok"
        android:src="@drawable/keyreset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:paddingLeft="45sp"
        android:paddingRight="45sp"
        android:text="@string/ftket"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:ems="30"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/fhemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/white"
        android:textColorHint="#a9a9ba"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/breset"
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/fbresetpw"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/iVBackforgotpw"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/back"
        android:src="@drawable/bback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>