<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17171f"
    tools:context=".MailFragment">

    <TextView
        android:id="@+id/tVsendemailmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tVsendemailmenu"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewmenu"
        android:layout_width="500dp"
        android:layout_height="1dp"
        android:background="#00FFAA"
        app:layout_constraintBottom_toBottomOf="@+id/eTmessagemenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVsendemailmenu"
        app:layout_constraintVertical_bias="0.02999998"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/eTemailmenu"
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext"
        android:ems="30"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/mehmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textColorHint="#a9a9ba"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVsendemailmenu"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/eTsubjectmenu"
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext"
        android:ems="30"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/mehsubject"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textColorHint="#a9a9ba"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTemailmenu"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/eTmessagemenu"
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_edittext"
        android:ems="30"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/mehmessage"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textColorHint="#a9a9ba"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTsubjectmenu"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/bsendemailmenu"
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/mebsend"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTmessagemenu"
        tools:ignore="TextContrastCheck,VisualLintButtonSize,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>